force-app/main/default/objects/Multi_Family_Product__c/Multi_Family_Product__c.object-meta.xml
<CustomObject>
    <label>Multifamily Product</label>
    <nameField>
        <label>Multi-Family Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Multifamily Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>