force-app/main/default/objects/Multi_Family_Product__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Multi-Family Products</relationshipLabel>
    <relationshipName>Multi_Family_Products</relationshipName>
    <type>Lookup</type>
</CustomField>