force-app/main/default/objects/Multi_Family_Product__c/fields/ADG_Flex_Product__c.field-meta.xml
<CustomField>
    <fullName>ADG_Flex_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ADG Flex Product</label>
    <type>Checkbox</type>
</CustomField>