force-app/main/default/objects/Multi_Family_Product__c/fields/Brand_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Brand_Manufacturer__c</fullName>
    <label>Brand Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AHF</fullName>
            </value>
            <value>
                <fullName>Armstrong</fullName>
            </value>
            <value>
                <fullName>Congoleum</fullName>
            </value>
            <value>
                <fullName>Daltile</fullName>
            </value>
            <value>
                <fullName>Earthwerks (Swiff Train)</fullName>
            </value>
            <value>
                <fullName>EF</fullName>
            </value>
            <value>
                <fullName>Emser</fullName>
            </value>
            <value>
                <fullName>Karndean</fullName>
            </value>
            <value>
                <fullName>Legget &amp; Platt</fullName>
            </value>
            <value>
                <fullName>Metroflor</fullName>
            </value>
            <value>
                <fullName>Mohawk</fullName>
            </value>
            <value>
                <fullName>MSI</fullName>
            </value>
            <value>
                <fullName>Roca</fullName>
            </value>
            <value>
                <fullName>Shaw</fullName>
            </value>
            <value>
                <fullName>Tarkett</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Tuffplank</fullName>
            </value>
            <value>
                <fullName>Urban Surfaces</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>