force-app/main/default/objects/Multi_Family_Product__c/fields/Carpet_Spec_Levels__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Spec_Levels__c</fullName>
    <label>Carpet Spec Levels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>18oz PET</fullName>
            </value>
            <value>
                <fullName>20oz PET</fullName>
            </value>
            <value>
                <fullName>25oz PET</fullName>
            </value>
            <value>
                <fullName>&gt;25oz PET</fullName>
            </value>
            <value>
                <fullName>Other PET</fullName>
            </value>
            <value>
                <fullName>18oz SmartStrand</fullName>
            </value>
            <value>
                <fullName>20oz SmartStrand</fullName>
            </value>
            <value>
                <fullName>25oz SmartStrand</fullName>
            </value>
            <value>
                <fullName>&gt;25oz SmartStrand</fullName>
            </value>
            <value>
                <fullName>Other SmartStrand</fullName>
            </value>
            <value>
                <fullName>18oz Nylon</fullName>
            </value>
            <value>
                <fullName>20oz Nylon</fullName>
            </value>
            <value>
                <fullName>25oz Nylon</fullName>
            </value>
            <value>
                <fullName>&gt;25oz Nylon</fullName>
            </value>
            <value>
                <fullName>Other Nylon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>