force-app/main/default/objects/Multi_Family_Product__c/fields/Color_Number__c.field-meta.xml
<CustomField>
    <fullName>Color_Number__c</fullName>
    <label>Color Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>