force-app/main/default/objects/Multi_Family_Product__c/fields/Cushion_Spec_Levels__c.field-meta.xml
<CustomField>
    <fullName>Cushion_Spec_Levels__c</fullName>
    <label>Cushion Spec Levels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3/8&quot; 5lb</fullName>
            </value>
            <value>
                <fullName>3/8&quot; 6lb</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>