force-app/main/default/objects/Multi_Family_Product__c/fields/LVP_Spec_Levels__c.field-meta.xml
<CustomField>
    <fullName>LVP_Spec_Levels__c</fullName>
    <label>LVP Spec Levels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2mm | 6 mil gluedown</fullName>
            </value>
            <value>
                <fullName>2mm | 8 mil gluedown</fullName>
            </value>
            <value>
                <fullName>2mm | 12 mil gluedown</fullName>
            </value>
            <value>
                <fullName>Rigid LVP</fullName>
            </value>
            <value>
                <fullName>Other gluedown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>