force-app/main/default/objects/Multi_Family_Product__c/fields/Multifamily_New_Construction_Project__c.field-meta.xml
<CustomField>
    <fullName>Multifamily_New_Construction_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Multifamily New Construction Project</label>
    <referenceTo>Multifamily_New_Construction_Project__c</referenceTo>
    <relationshipLabel>Multifamily Products</relationshipLabel>
    <relationshipName>Multifamily_Products</relationshipName>
    <type>Lookup</type>
</CustomField>