force-app/main/default/objects/Multi_Family_Product__c/fields/Other_Brand_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Brand_Details__c</fullName>
    <label>Other Brand Details</label>
    <type>TextArea</type>
</CustomField>