force-app/main/default/objects/Multi_Family_Product__c/fields/Other_LVP_Spec_Level_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_LVP_Spec_Level_Details__c</fullName>
    <label>Other LVP Spec Level Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>