force-app/main/default/objects/Multi_Family_Product__c/fields/Other_Sheet_Vinyl_Spec_Level_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Sheet_Vinyl_Spec_Level_Details__c</fullName>
    <label>Other Sheet Vinyl Spec Level Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>