force-app/main/default/objects/Multi_Family_Product__c/fields/Product_Style_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Style_Number__c</fullName>
    <label>Product Style Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>