force-app/main/default/objects/Multi_Family_Product__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carpet</fullName>
            </value>
            <value>
                <fullName>LVP</fullName>
            </value>
            <value>
                <fullName>Sheet Vinyl</fullName>
            </value>
            <value>
                <fullName>Cushion</fullName>
            </value>
            <value>
                <fullName>Wood Product</fullName>
            </value>
            <value>
                <fullName>Cabinets</fullName>
            </value>
            <value>
                <fullName>Countertops</fullName>
            </value>
            <value>
                <fullName>Tile</fullName>
                <isActive>false</isActive>
                <label>Tile</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>