force-app/main/default/objects/Multi_Family_Product__c/fields/Sheet_Vinyl_Spec_Levels__c.field-meta.xml
<CustomField>
    <fullName>Sheet_Vinyl_Spec_Levels__c</fullName>
    <label>Sheet Vinyl Spec Levels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>55 gauge</fullName>
            </value>
            <value>
                <fullName>60 gauge</fullName>
            </value>
            <value>
                <fullName>65 gauge</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>